--- a/welcome.html
+++ b/welcome.html
@@ -2,83 +2,72 @@
 layout: default
 ---
 <style>
-    .welcome {
-    background: url(assets/welcomebackground.jpg) no-repeat top center;
-    background-size: contain;
-    padding-top: 100px;
-    min-height: 1200px;
-    }
+    .welcomeHeader {
+        min-height: 400px;
+        background: url(assets/auditorium.jpg) no-repeat center center;
+        background-size: cover;
+}
 </style>
-
 <div class="welcome">
-    <div class="welcome__Header">
-    <h1>New to Community Baptist</h1>
-    </div><!--/welcome__Header-->
-    <div class="welcome__Wrapper" id="content">
-        <div class="sticky-wrapper" data-sticky-container>
-        <div class="sticky" data-sticky data-anchor="content" data-options="marginTop:0;" style="width:100%;">
-        <ul class="welcome__Menu"  data-magellan data-options="activeClass:active; threshold:85; animationDuration:500; barOffset:50;">
-            <li><a href="#welcome">Welcome</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#location">Location</a></li>
-            <li><a href="#expect">What to Expect</a></li>
-            <li><a href="#children">Children</a></li>
-            <li><a href="#teens">Teens</a></li>
-            <li><a href="#faq">FAQ</a></li>
-        </ul><!--/welcome__Menu--> 
-        </div><!--/sticky-->
-        </div><!--/sticky-wrapper-->
-    <div class="welcome__Content">
-        <div id="welcome" class="welcome__Content__welcome" data-magellan-target="welcome">
-            <h2>Visiting Community Baptist</h2>
-            <p>Visiting any church, especially a larger one, for the very first time can be a tough experience. Well, we want to put you at ease. Your first visit to Lancaster Baptist will be refreshing, friendly, and enjoyable for your whole family. We want you to experience inspiring music, helpful teaching and preaching, friendly people, and a place where you feel welcome and "at home"! Here are a few answers to your questions and what you might expect on your first visit.</p>
+    <div class="welcomeHeader">
+        <h1>Welcome to Cranesville Bible Church</h1>
+    </div><!-- /welcomeHeader -->
+    <div class="welcomeIntro">
+        <div class="content">
+        <img src="assets/welcome1.jpg" alt="">
+        <h2>Welcome</h2>
+        <p>We are a church that is committed to equipping believers to grow in their faith and understanding of the Word of God through teaching, preaching, singing, and serving.</p>
+        <p>We strive to faithfully teach the Bible in a way that engages, instructs, and challenges every believer. Our focus is not only to learn what the Bible says, but also how it applies to our lives today. As such, we recognize that the Bible is God’s revelation of Himself to us, and thus we are to focus on It rather than on our own opinions.</p>
+        <p>We offer many opportunities for families and individuals of all ages to gather and grow in their faith. These include Sunday School classes for all age groups, youth group, children’s clubs, men’s and women’s ministries, and senior’s fellowship activities.</p>
         </div>
-        <div id="services" class="welcome__Content__services" data-magellan-target="services">
-             <h2>Our Services</h2>
-            <h3>When are your services?</h3>
-            <p>Our main worship services are Sunday mornings at 8:30 am and 11:00 am. Both services are identical with the same Bible message and music program, so choose the one that best fits your schedule.</p>
-
-            <h4>Sunday</h4>
-                <ul>
-                <li>8:30 am &amp; 11:00 am Morning Worship Services</li>
-                <li>10:00 am Classes for All Ages</li>
-                <li>9:00 am &amp; 11:30 am Servicio en Español</li>
-                <li>11:00 am Deaf Service</li>
-                <li>1:00 pm Clases Bíblicas por Edades</li>
-                <li>5:00 pm Evening Service</li>
-                </ul>
-                <h4>Wednesday</h4>
-                <ul>
-                <li>7:00 pm Growth Point Services</li>
-                </ul>
-<p>Worship is the act of loving and responding to God! Through the heart-warming, conservative music and the clear, Bible teaching and preaching in our services, your heart will be inspired to love and to respond to God. Each week, families are strengthened, encouraged, and drawn closer to Him through these special times together. Each service is carefully planned and prayed over so that God may work in your life!</p>
-        </div>
-        <div id="location" class="welcome__Content__location" data-magellan-target="location">
-             <h2>Our Location</h2>
-             <h3>How do I get to CBC?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates saepe quia eaque iste dolorem praesentium, doloremque quam fugit delectus cumque expedita! Dolores consequatur, iste non eos corporis optio suscipit quasi?</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48200.68596772981!2d-72.65404492246601!3d40.969592029752874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e88bf438843fa7%3A0xae0fd43d7f0670b1!2s5267+Sound+Ave%2C+Riverhead%2C+NY+11901!5e0!3m2!1sen!2sus!4v1453866313647" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-        <div id="expect" class="welcome__Content__expect" data-magellan-target="expect">
-             <h2>What To Expect</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates saepe quia eaque iste dolorem praesentium, doloremque quam fugit delectus cumque expedita! Dolores consequatur, iste non eos corporis optio suscipit quasi?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa necessitatibus, quos suscipit laborum perferendis expedita, eaque distinctio vitae beatae. Voluptates, eius vel alias illum consequatur. Aliquam, voluptate velit non ipsum.</p>
-        </div>
-        <div id="children" class="welcome__Content__children" data-magellan-target="children">
-             <h2>What About the Kids?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates saepe quia eaque iste dolorem praesentium, doloremque quam fugit delectus cumque expedita! Dolores consequatur, iste non eos corporis optio suscipit quasi?</p>
-        </div>
-        <div id="teens" class="welcome__Content__teens" data-magellan-target="teens">
-             <h2>Will my teens like it?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates saepe quia eaque iste dolorem praesentium, doloremque quam fugit delectus cumque expedita! Dolores consequatur, iste non eos corporis optio suscipit quasi?</p>
-        </div>
-        <div id="faq" class="welcome__Content__faq" data-magellan-target="faq">
-            <h2>Frequently Asked Questions</h2>
-            <h3>How should I dress?</h3>
-            <p>There is not a dress code at Lancaster Baptist Church for members or guests. Our ministry leaders and many of our church family dress in more traditional “Sunday” dress; however, our main goal is that you would feel welcome and comfortable on your visit here at Lancaster Baptist!</p>
-            <h3>Am I expected to participate in the offering?</h3>
-            <p>No. We don't invite you to Lancaster Baptist Church for your offering. We want our service to be a gift to you. We hope you will find in this place a warm family spirit, truth from God's Word, and a place where you can grow in God's grace. Please don't feel any obligation to participate in the offering as a guest.</p>
-        </div>
-    </div><!--/welcome__Content-->
-    </div><!--/welcome__Wrapper-->
-</div><!--/welcome-->
+    </div><!-- /welcomeIntro -->
+    <div class="welcomeServices">
+    <div class="wrapper">
+    <div class="content">
+        <h2>What To Expect</h2>
+        <p>I would like to take a minute to welcome you to our church and to explain just what you can expect should you choose to visit our congregation.  This information is being given in order of experience and not in order of importance.</p>
+        <p>
+            <strong>First, you would find a welcoming and loving family of Christ.</strong>  We strive to exemplify the command to become a unified body serving Christ.  As such, we welcome visitors and strive to be a source of encouragement and support for all those we come in contact with.
+        </p>
+        <p><strong>Second, you would find others within your stage of life.</strong>  Though we are not a large church, our church is blessed to have a wide range of believers from all age groups and from all walks of life.  We have Sunday school classes for every age group from nursery to adults.  There is also a Junior Church program for children between the ages of 4-7, which is run during the morning sermon.</p>
+        <p><strong>Third, you would notice that our church is blended in its dress styles.</strong>  On any Sunday one would see dresses, suits, and jeans.</p>
+        <p><strong>Fourth, you can expect our music to be a blend of tradition hymns with some choruses and praise music.</strong>  The Scriptures command us to sing unto the Lord with psalms (Scripture put to music), hymns (doctrine put to music), and spiritual songs (songs of praise and encouragement).  As such we strive to incorporate each of these into our music while keeping the glory and emphasis on Christ.</p>
+        <p><strong>Finally, you can expect the Word of God to be the emphasis of each service and ministry of this church.</strong> Whether it is Sunday School, the morning or evening service, Bible study, or Youth Group the Word of God is our priority.  The average morning service begins at 11:00 and ends around 12:15, of that time the majority is the preaching and teaching of the Word.  No church can long be used by God if it abandons the teaching of His Word.  The Word is taught in a very engaging and captivating way, with an emphasis on both instruction and application.</p>
+        <p>I hope that these little bits of information were helpful in preparing you for what you can expect at CBC.  We hope to see you soon, and if you have any questions please call us at 814-756-5287.  God Bless.</p>
+        </div><!-- content -->
+        </div><!-- wrapper -->
+    </div><!-- /welcomeServices -->
+    <div class="welcomeLocation">
+        <div class="content">
+        <div class="text">
+        <h2>Location</h2>
+        <p>Cranesville Bible Church is located in the middle of Cranesville, PA southwest of Erie. We are a short drive from Albion, Edinboro, and Platea.</p>
+        </div><!-- /text -->
+        <div id="map">
+            
+        </div><!-- /map -->
+        <script>
+          function initMap() {
+            var mapDiv = document.getElementById('map');
+            var myLatLng = {lat: 41.9035427, lng: -80.3452172};
+            var churchPos = {lat: 41.9035427, lng: -80.3452172};
+            var map = new google.maps.Map(mapDiv, {
+          center: myLatLng,
+          zoom: 15
+        });
+        var image = 'https://dl.dropboxusercontent.com/u/47159282/churchIcon.png';
+        var marker = new google.maps.Marker({
+            position: churchPos,
+            map: map,
+            title: 'Cranesville Bible Church',
+            icon: image
+        });
+        // To add the marker to the map, call setMap();
+        marker.setMap(map);
+      }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
+        async defer></script>
+        </div><!-- /content -->
+    </div><!-- /welcomeLocation -->
+</div><!-- /welcome -->
