Moved Airtable out to root and added it's config to _config.yml

--- a/welcome.html
+++ b/welcome.html
@@ -16,7 +16,7 @@ layout: default
 <div class="welcome"><!-- This is a wrapper for the whole page-->
 
     <div class="welcomeHeader">
-        <h1>Welcome to Generic Baptist Church</h1>
+        <h1>Welcome to {{site.title}}</h1>
     </div><!-- /welcomeHeader -->
 
 
