--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     </div><!--/wrapper-->
 </div><!--/visitors-->
 <div class="currentSeries">
-    {% for item in site.data.series limit: 2 offset: 1 %}
+    {% for item in site.data.homeseries limit: 2 offset: 1 %}
     <div class="currentSeries__series">
         <a href="{{ item.title | datapage_url: 'series' | prepend: site.baseurl | prepend: site.url }}">{%if item.featured_image%}{% for img in item.featured_image %}<img src="{{ img.url }}" alt="sermon series graphic" class="thumbnail">{% endfor %}{% else %}<img src="http://placehold.it/240x240" alt="sermon series graphic" class="thumbnail">{%endif%}</a>
         {% if item.service %}
@@ -31,7 +31,7 @@ layout: default
 </div><!--/currentSeries-->
 <div class="homeMinistries">
     <h1>Featured Ministries</h1>
-    {% for item in site.data.ministries limit: 3 %}
+    {% for item in site.data.homeministries limit: 3 %}
         {% if item.header_image %}
             {% for img in item.header_image %}
                 <div class="ministry" style="background: url({{img.url}}) no-repeat center center">
